opa-gatekeeper/nginx-deployment-improper-definition.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx
    purpose: production 
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
    purpose: production
    dataprotection: notreal
    immutable: notenabled
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
